# jinja-renderer

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
.github/workflows/: build.yml
derive_renderer/: Cargo.toml
derive_renderer/examples/: tpl.rs
derive_renderer/src/: all_events.rs  context.rs  event.rs  generate.rs  lib.rs
renderer/: Cargo.toml
renderer/src/: lib.rs
renderer/src/filters/: icon.rs  markdown.rs  mod.rs
renderer/src/filters/snapshots/: jinja_renderer__filters__icon__tests__icon_should_work.snap  jinja_renderer__filters__markdown__tests__markdown_should_work.snap
renderer/src/frameworks/: axum.rs  mod.rs
renderer/tests/: derive.rs
