[package]
name = "derive-jinja-renderer"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0.193", features = ["derive"] }
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
jinja-renderer = { workspace = true }
