[package]
name = "derive-jinja-renderer"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/jinja-renderer"
repository = "https://github.com/tyrchen/jinja-renderer"
homepage = "https://github.com/tyrchen/jinja-renderer"
description = """
derive macro for jinja-renderer crate
"""
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0.193", features = ["derive"] }
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
jinja-renderer = { workspace = true }
