[package]
name = "jinja-renderer"
version = "0.2.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/jinja-renderer"
repository = "https://github.com/tyrchen/jinja-renderer"
homepage = "https://github.com/tyrchen/jinja-renderer"
description = """
useful utilities for rendering minijinja templates
"""
readme = "../README.md"

[features]
default = ["derive"]
derive = ["derive-jinja-renderer"]
icon = ["free-icons"]
markdown = ["comrak"]
minify = ["minify-html"]
with-axum = ["axum-core", "http"]


[dependencies]
axum-core = { version = "0.4", optional = true }
comrak = { version = "0.20", optional = true }
derive-jinja-renderer = { workspace = true, optional = true }
free-icons = { version = "0.7", optional = true }
http = { version = "1.0", optional = true }
minify-html = { version = "0.15", optional = true }
minijinja = { version = "1.0", features = ["speedups", "loader"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.34", features = ["json", "redactions"] }
once_cell = "1.19"
